package pos_creditcard;

import java.util.*;
import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.ArrayList;

public class Sale {
  private boolean isPaid = false;
  private int id;
  private ArrayList<SaleLineItem> saleLineItems = new ArrayList<>();
  private LocalDateTime dateTime = LocalDateTime.now();
  private Payment payment;  // note : supertype

  public Sale(int id) {
    this.id = id;
  }

  public int getId() {
    return id;
  }

  public void addLineItem(ProductSpecification productSpecification, int quantity) {
    for (SaleLineItem item : saleLineItems) {
      if (item.productSpecification == productSpecification) { // same object
        item.incrementQuantity(quantity);
        return;
      }
    }
    saleLineItems.add(new SaleLineItem(productSpecification, quantity));
  }

  // Hacemos público total() para que PointOfSale pueda usarlo */
  public double total() {
    double total = 0.;
    for (SaleLineItem saleLineItem : saleLineItems) {
      total += saleLineItem.subtotal();
    }
    return total;
  }

  public void printReceipt() {
    System.out.println("Sale " + id);
    System.out.println(DateTimeFormatter.ofPattern("dd-MM-yyy hh:mm").format(dateTime));
    for (SaleLineItem saleLineItem : saleLineItems) {
      saleLineItem.print();
    }
    System.out.printf("Total %.2f\n", total());
  }

  public void badPrintReceipt() {
    System.out.println("Sale " + id);
    System.out.println(DateTimeFormatter.ofPattern("dd-MM-yyy hh:mm").format(dateTime));
    double total = 0.;
    for (SaleLineItem saleLineItem : saleLineItems) {
      String prodName = saleLineItem.productSpecification.getName();
      int quantity = saleLineItem.getQuantity();
      double price = saleLineItem.productSpecification.getPrice();
      double subtotal = quantity * price;
      System.out.printf("%s %d x %.2f = %.2f\n", prodName, quantity, price, subtotal);
      total += subtotal;
    }
    System.out.printf("Total %.2f\n", total);
  }

  public void payCash(Map<Double, Integer> moneyHanded, CashBox cashBox, ChangeMaker changeMaker) {
    assert !isPaid : "sale " + id + " has already been paid";

    double totalToPay = total();
    double amountHanded = 0.0;

    //Calculamos cuanto dinero ha entregado el cliente
    for (var entry: moneyHanded.entrySet()) {
        amountHanded += entry.getValue() * entry.getKey();
    }

    PaymentInCash paymentInCash = new PaymentInCash(totalToPay, cashBox, changeMaker);
    paymentInCash.processPayment(moneyHanded);
    payment = paymentInCash;
    isPaid = true;
  }

  public void payCreditCard(String ccnumber) {
    assert !isPaid : "sale " + id + " has already been paid";
    payment = new PaymentCreditCard(ccnumber, total());
    if ( ((PaymentCreditCard) payment).isAuthorized() ) {
      // note cast, necessary to call isAuthorized()
      isPaid = true;
    }
  }

  public void printPayment() {
    assert payment != null : "No payment for sale " + id;
    payment.print();
  }

  public boolean isPaid() {
    return isPaid;
  }

}
